fix: indentation & code on one line for img/links

--- a/about-us.html
+++ b/about-us.html
@@ -6,28 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap CSS -->
-    <link 
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
-        rel="stylesheet" 
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
-        crossorigin="anonymous"
-    /> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"/> 
 
     <!-- Font Awesome -->
-     <script 
-        src="https://kit.fontawesome.com/7d5ddd03f5.js" 
-        crossorigin="anonymous"
-    ></script>
+     <script src="https://kit.fontawesome.com/7d5ddd03f5.js" crossorigin="anonymous"></script>
         
-    <!-- External Style Sheet -->
-    <link 
-        href="./assets/css/style.css"
-        rel="stylesheet" 
-        type="text/css"
-    />
-
-
+    <!-- Favicon logo -->
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
+
+    <!-- External Style Sheet -->
+    <link href="./assets/css/style.css" rel="stylesheet" type="text/css"/>
 
     <title>Muscle Valley Gym | About-Us</title>
 </head>
@@ -47,16 +35,12 @@
         </nav>
     </header>
 
+    <!-- Hero Image / Video -->
     <section id="about-outer-hero">
-        <iframe 
-            src="https://www.youtube.com/embed/JxvVke8vzhY?autoplay=1&mute=1" 
-            title="YouTube video player" 
-            frameborder="0" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-            allowfullscreen>
-        </iframe>
+        <iframe src="https://www.youtube.com/embed/JxvVke8vzhY?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
 
+    <!-- About Us and Services -->
     <section>
         <div class="about-us-description">
             <div class="about-us-text">
@@ -73,18 +57,10 @@
                 <br>
                 <p>Thus Muscle Valley Gym was born!</p>
             </div>
-            <img 
-                src="./assets/images/victor-freitas-nlZTjUZX2qo-unsplash.jpg" 
-                alt=""
-                class="about-us-coaching"
-            />
+            <img src="./assets/images/victor-freitas-nlZTjUZX2qo-unsplash.jpg" alt="" class="about-us-coaching"/>
         </div>
         <div class="about-us-services">
-            <img 
-                src="./assets/images/gabin-vallet-J154nEkpzlQ-unsplash.jpg" 
-                alt=""
-                class="about-us-group"
-            />
+            <img src="./assets/images/gabin-vallet-J154nEkpzlQ-unsplash.jpg" alt="" class="about-us-group"/>
             <div class="services">
                 <h4>The Services We Provide:</h4>
                 <ul class="services-list">
@@ -102,6 +78,7 @@
         </div>
     </section>
 
+    <!-- Footer -->
     <footer>
         <div class="gym-location"></div>
         <div class="contact-details">
