--- a/index.html
+++ b/index.html
@@ -16,27 +16,16 @@
     <meta name="twitter:description" content="Muscle Valley Gym is situated just outside of Caerphilly is the Welsh Answer to Muscle Beach, we pride ourselves on our culture and being known as being more than a gym"/>
 
         <!-- Bootstrap CSS -->
-    <link 
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
-        rel="stylesheet" 
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
-        crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"/>
 
     <!-- Font Awesome -->
-    <script 
-        src="https://kit.fontawesome.com/7d5ddd03f5.js" 
-        crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/7d5ddd03f5.js" crossorigin="anonymous"></script>
+
+    <!-- Favicon logo -->
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
 
     <!-- External Style Sheet -->
-    <link 
-        href="./assets/css/style.css"
-        rel="stylesheet" 
-        type="text/css"
-    />
-
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <link href="./assets/css/style.css" rel="stylesheet" type="text/css"/>
         
     <title>Muscle Valley Gym | Home</title>
 </head>
@@ -60,15 +49,12 @@
     <section class="home-hero-outer">
         <div class="home-hero-inner">
             <h2 class="gym-slogan">The Welsh Answer to Muscle Beach</h2>
-            <img 
-                src="./assets/images/luis-vidal-FodEsaNZs48-unsplash.jpg" 
-                class="home-hero-image"
-                alt="A photo of an open gym, where people are standing around ready to move onto the next work station in a large circle awaiting for the instructors signal to move. "
-            >
+            <img src="./assets/images/luis-vidal-FodEsaNZs48-unsplash.jpg" class="home-hero-image" alt="A photo of an open gym, where people are standing around ready to move onto the next work station in a large circle awaiting for the instructors signal to move.">
             <a href="join-us.html"><h2 id="join-us">Join Us</h2></a>
         </div>
     </section>
 
+    <!-- Carousel on Services Offered -->
     <section id="carousel-outer">
         <h2 class="carousel-header">Check out below what we offer</h2>
         <div id="classesAvailableCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000" data-bs-pause="hover">
@@ -130,6 +116,7 @@
 
     </section>
 
+    <!-- Testimonials -->
     <section id="testimonials-outer">
         <div id="testimonial-inner">
           <div class="testimonial">
@@ -153,6 +140,7 @@
         </div>
     </section>
 
+    <!-- Footer -->
     <footer>
       <div class="gym-location"></div>
       <div class="contact-details">
@@ -182,19 +170,9 @@
       </ul>
   </footer>
 
-    <script 
-        src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" 
-        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" 
-        crossorigin="anonymous"
-    ></script>
-
-     <!-- Bootstrap 5 JS -->
-
-    <script 
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" 
-        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" 
-        crossorigin="anonymous"
-    ></script>
+  <!-- Bootstrap 5.0.2 JS -->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" ntegrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 
 </body>
 </html>
