--- a/join-us.html
+++ b/join-us.html
@@ -5,28 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-       <!-- Bootstrap CSS -->
-       <link 
-       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
-       rel="stylesheet" 
-       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
-       crossorigin="anonymous"
-   />
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"/>
 
     <!-- Font Awesome -->
-    <script 
-        src="https://kit.fontawesome.com/7d5ddd03f5.js" 
-        crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/7d5ddd03f5.js" crossorigin="anonymous"></script>
     
-    <!-- External Style Sheet -->
-    <link 
-        href="./assets/css/style.css"
-        rel="stylesheet" 
-        type="text/css"
-    />
-
+    <!-- Favicon logo -->
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
+
+    <!-- External Style Sheet -->
+    <link href="./assets/css/style.css" rel="stylesheet" type="text/css"/>
 
     <title>Muscle Valley Gym | Join-Us</title>
 </head>
@@ -46,6 +35,7 @@
         </nav>
     </header>
 
+    <!-- Hero Image and Membership Details -->
     <section class="join-us-hero">
         <div class="membership-options">
             <div class="membership-levels">
@@ -86,60 +76,62 @@
             </div>
         </div>
 
-          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <!-- Join-Us Registration Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">Join Us Now!!</h5>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <form action="https://formdump.codeinstitute.net/" method="POST">
-                        <div class="mb-3">
-                            <label for="firstName" class="form-label">First Name</label>
-                            <input type="text" class="form-control" id="firstName" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="lastName" class="form-label">Last Name</label>
-                            <input type="text" class="form-control" id="lastName" required>
-                        </div>
-                        <div class="mb-3">
-                          <label for="email" class="form-label">Email Address</label>
-                          <input type="email" class="form-control" id="email" required>
-                        </div>
-                        <div class="mb-3">
-                          <label for="phone" class="form-label">Telephone Number</label>
-                          <input type="tel" class="form-control" id="phone" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="text" class="form-label">What Are Your Fitness Goals?</label>
-                            <input type="text" class="form-control" id="text" required>
-                        </div>
-                        <div class="mb-3 radio-buttons">
-                            <div>
-                                <input type="radio" id="club" name="membership-level" value="club" required>
-                                <label for="club">Club</label>
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Join Us Now!!</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form action="https://formdump.codeinstitute.net/" method="POST">
+                            <div class="mb-3">
+                                <label for="firstName" class="form-label">First Name</label>
+                                <input type="text" class="form-control" id="firstName" required>
                             </div>
-                            <div>
-                                <input type="radio" id="basic" name="membership-level" value="basic" required>
-                                <label for="basic">Basic</label>
+                            <div class="mb-3">
+                                <label for="lastName" class="form-label">Last Name</label>
+                                <input type="text" class="form-control" id="lastName" required>
                             </div>
-                            <div>
-                                <input type="radio" id="comprehensive" name="membership-level" value="comprehensive" required>
-                                <label for="comprehensive">Comprehensive</label>
+                            <div class="mb-3">
+                                <label for="email" class="form-label">Email Address</label>
+                                <input type="email" class="form-control" id="email" required>
                             </div>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                    </form>
+                            <div class="mb-3">
+                                <label for="phone" class="form-label">Telephone Number</label>
+                                <input type="tel" class="form-control" id="phone" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="text" class="form-label">What Are Your Fitness Goals?</label>
+                                <input type="text" class="form-control" id="text" required>
+                            </div>
+                            <div class="mb-3 radio-buttons">
+                                <div>
+                                    <input type="radio" id="club" name="membership-level" value="club" required>
+                                    <label for="club">Club</label>
+                                </div>
+                                <div>
+                                    <input type="radio" id="basic" name="membership-level" value="basic" required>
+                                    <label for="basic">Basic</label>
+                                </div>
+                                <div>
+                                    <input type="radio" id="comprehensive" name="membership-level" value="comprehensive" required>
+                                    <label for="comprehensive">Comprehensive</label>
+                                </div>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    </div>
                 </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                </div>
-              </div>
             </div>
-          </div>
+        </div>
     </section>
 
+    <!-- Footer -->
     <footer>
         <div class="gym-location"></div>
         <div class="contact-details">
@@ -170,7 +162,6 @@
     </footer>
 
  <!-- Bootstrap 5 JS -->
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     
 </body>
