fix: rm frameborder from iframe as obsolete

--- a/about-us.html
+++ b/about-us.html
@@ -37,7 +37,7 @@
 
     <!-- Hero Image / Video -->
     <section id="about-outer-hero">
-        <iframe src="https://www.youtube.com/embed/JxvVke8vzhY?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/JxvVke8vzhY?autoplay=1&mute=1" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
 
     <!-- About Us and Services -->
