fix: add rel noopener to media links

--- a/about-us.html
+++ b/about-us.html
@@ -101,11 +101,11 @@
             <p class="bank-holiday-exclude">**Bank Holidays may vary please call us for further details.</p>
         </div>
         <ul class="social-media">
-            <li><a href="https://www.facebook.com" target="_blank"><span class="sr-only">Hyperlink to Muscle Valley Gym Facebook page.</span><i class="fab fa-facebook"></i></a></li>
-            <li><a href="https://www.twitter.com" target="_blank"><span class="sr-only">Hyperlink to Muscle Valley Gym Twitter page.</span><i class="fab fa-twitter-square"></i></a></li>
-            <li><a href="https://www.instagram.com" target="_blank"><span class="sr-only">Hyperlink to Muscle Valley Gym Instagram page.</span><i class="fab fa-instagram"></i></a></li>
-            <li><a href="https://www.tiktok.com" target="_blank"><span class="sr-only">Hyperlink to Muscle Valley Gym Tik-Tok page.</span><i class="fab fa-tiktok"></i></a> </li>
-        </ul>
+            <li><a href="https://www.facebook.com" target="_blank" rel="noopener"><span class="sr-only">Hyperlink to Muscle Valley Gym Facebook page.</span><i class="fab fa-facebook"></i></a></li>
+            <li><a href="https://www.twitter.com" target="_blank" rel="noopener"><span class="sr-only">Hyperlink to Muscle Valley Gym Twitter page.</span><i class="fab fa-twitter-square"></i></a></li>
+            <li><a href="https://www.instagram.com" target="_blank" rel="noopener"><span class="sr-only">Hyperlink to Muscle Valley Gym Instagram page.</span><i class="fab fa-instagram"></i></a></li>
+            <li><a href="https://www.tiktok.com" target="_blank" rel="noopener"><span class="sr-only">Hyperlink to Muscle Valley Gym Tik-Tok page.</span><i class="fab fa-tiktok"></i></a> </li>
+          </ul>
     </footer>
     
 </body>
