fix: accessibility issues on about-us & join-us sheets

--- a/about-us.html
+++ b/about-us.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Muscle Valley Gym is situated just outside of Caerphilly is the Welsh Answer to Muscle Beach, we pride ourselves on our culture and being known as being more than a gym">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap CSS -->
@@ -62,7 +63,7 @@
         <div class="about-us-services">
             <img src="./assets/images/gabin-vallet-J154nEkpzlQ-unsplash.jpg" alt="" class="about-us-group"/>
             <div class="services">
-                <h4>The Services We Provide:</h4>
+                <h2>The Services We Provide:</h2>
                 <ul class="services-list">
                     <li>Access to Various Workout Equipment</li>
                     <li>Group Classes</li>
