--- a/join-us.html
+++ b/join-us.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Muscle Valley Gym is situated just outside of Caerphilly is the Welsh Answer to Muscle Beach, we pride ourselves on our culture and being known as being more than a gym">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap CSS -->
@@ -39,7 +40,7 @@
     <section class="join-us-hero">
         <div class="membership-options">
             <div class="membership-levels">
-                <h4>Club Membership</h4>
+                <h2>Club Membership</h2>
                 <ul>
                     <li>Unlimited Access to Club Running</li>
                     <li>Nutritional Advice</li>
@@ -49,7 +50,7 @@
                 <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="join-us-button">Join us</button>
             </div>
             <div class="membership-levels">
-                <h4>Basic Membership</h4>
+                <h2>Basic Membership</h2>
                 <ul>
                     <li>Unlimited Access to the Gym</li>
                     <li>Unlimited Access to the Group Classes</li>
@@ -61,7 +62,7 @@
                 <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="join-us-button">Join us</button>
             </div>
             <div class="membership-levels">
-                <h4>Comprehensive Membership</h4>
+                <h2>Comprehensive Membership</h2>
                 <ul>
                     <li>Unlimited Access to the Gym</li>
                     <li>Unlimited Access to the Group Classes</li>
@@ -108,8 +109,8 @@
     </footer>
 
     <!-- Join-Us Registration Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" role="dialog">
+        <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">Join Us Now!!</h5>
