--- a/join-us.html
+++ b/join-us.html
@@ -113,7 +113,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Join Us Now!!</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Join us today - Register interested below!</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
