fix: add sr-only h2 to testimonial sections

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 
     <!-- Testimonials -->
     <section id="testimonials-outer">
+      <h2 class="sr-only">Testimonials</h2>
         <div id="testimonial-inner">
           <div class="testimonial">
             <p>Going to a gym can be really intimidating, from the start this gym has not only been welcoming but extremely supportive. 
